Update Desktop Synthesizer Gradle build for JDK 25